--- a/InKeLive-gcz_99/InKeLive/Logon/ForgetPasswordViewController.xib
+++ b/InKeLive-gcz_99/InKeLive/Logon/ForgetPasswordViewController.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment version="2304" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -26,58 +25,76 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入已绑定的手机号码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bQX-Wr-zaa">
-                    <rect key="frame" x="12" y="76" width="347" height="30"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入已绑定的手机号码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bQX-Wr-zaa">
+                    <rect key="frame" x="12" y="76" width="351" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="irB-2f-mSp"/>
+                    </constraints>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V4J-YK-vHc">
-                    <rect key="frame" x="12" y="105" width="347" height="1"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V4J-YK-vHc">
+                    <rect key="frame" x="12" y="105" width="351" height="1"/>
                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="MRH-96-lDd"/>
+                    </constraints>
                 </view>
-                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Is4-ls-J29">
-                    <rect key="frame" x="12" y="125" width="347" height="30"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                <textField opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Is4-ls-J29">
+                    <rect key="frame" x="12" y="125" width="263" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="5pq-fv-kVa"/>
+                    </constraints>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4ri-tj-IAD">
-                    <rect key="frame" x="9" y="155" width="347" height="1"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4ri-tj-IAD">
+                    <rect key="frame" x="12" y="155" width="351" height="1"/>
                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="KOC-ah-otq"/>
+                    </constraints>
                 </view>
-                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="r7X-ri-B4K">
-                    <rect key="frame" x="12" y="176" width="347" height="30"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="r7X-ri-B4K">
+                    <rect key="frame" x="12" y="176" width="351" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="Btd-qi-ujP"/>
+                    </constraints>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" textContentType="password"/>
                 </textField>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UY5-Yv-pNA">
-                    <rect key="frame" x="12" y="205" width="347" height="1"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UY5-Yv-pNA">
+                    <rect key="frame" x="12" y="205" width="351" height="1"/>
                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="61T-g8-uis"/>
+                    </constraints>
                 </view>
-                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请再次输入密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZGa-gy-zkK">
-                    <rect key="frame" x="12" y="225" width="347" height="30"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请再次输入密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZGa-gy-zkK">
+                    <rect key="frame" x="12" y="225" width="351" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="msj-71-9N5"/>
+                    </constraints>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" textContentType="password"/>
                 </textField>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gjr-ZG-9gC">
-                    <rect key="frame" x="12" y="256" width="347" height="1"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gjr-ZG-9gC">
+                    <rect key="frame" x="12" y="256" width="351" height="1"/>
                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="KwY-hh-Qdi"/>
+                    </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wa8-Un-YPD">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wa8-Un-YPD">
                     <rect key="frame" x="14" y="278" width="347" height="36"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="1" green="0.81176470590000005" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="36" id="HZv-Oi-GLv"/>
+                    </constraints>
                     <state key="normal" title="找回密码">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
@@ -91,10 +108,13 @@
                         <action selector="btnFindPasswordClicked:" destination="-1" eventType="touchUpInside" id="yoa-li-NJF"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5qv-Ln-zbH">
-                    <rect key="frame" x="276" y="125" width="79" height="25"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5qv-Ln-zbH">
+                    <rect key="frame" x="283" y="127.5" width="79" height="25"/>
                     <color key="backgroundColor" red="1" green="0.81176470590000005" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="25" id="QPt-dn-w4d"/>
+                        <constraint firstAttribute="width" constant="79" id="iRh-h6-M7i"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="获取验证码">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -111,7 +131,37 @@
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <constraints>
+                <constraint firstItem="bQX-Wr-zaa" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="76" id="1Mo-pg-Mb9"/>
+                <constraint firstItem="V4J-YK-vHc" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="105" id="2ZB-8G-JyW"/>
+                <constraint firstAttribute="trailing" secondItem="ZGa-gy-zkK" secondAttribute="trailing" constant="12" id="3VQ-yt-vTt"/>
+                <constraint firstAttribute="trailing" secondItem="wa8-Un-YPD" secondAttribute="trailing" constant="14" id="9KN-Sx-aC6"/>
+                <constraint firstAttribute="trailing" secondItem="V4J-YK-vHc" secondAttribute="trailing" constant="12" id="ERe-V6-bvf"/>
+                <constraint firstItem="r7X-ri-B4K" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="FJT-Ep-Gn7"/>
+                <constraint firstItem="gjr-ZG-9gC" firstAttribute="top" secondItem="ZGa-gy-zkK" secondAttribute="bottom" constant="1" id="Lqy-tZ-qNm"/>
+                <constraint firstItem="V4J-YK-vHc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="Ma8-tJ-YQc"/>
+                <constraint firstItem="r7X-ri-B4K" firstAttribute="top" secondItem="4ri-tj-IAD" secondAttribute="bottom" constant="20" id="P4S-0w-1xK"/>
+                <constraint firstItem="UY5-Yv-pNA" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="Q9t-cA-kZ6"/>
+                <constraint firstAttribute="trailing" secondItem="UY5-Yv-pNA" secondAttribute="trailing" constant="12" id="QEn-az-GSO"/>
+                <constraint firstAttribute="trailing" secondItem="4ri-tj-IAD" secondAttribute="trailing" constant="12" id="SC6-5d-4VV"/>
+                <constraint firstItem="5qv-Ln-zbH" firstAttribute="leading" secondItem="Is4-ls-J29" secondAttribute="trailing" constant="8" id="Som-au-gfK"/>
+                <constraint firstItem="ZGa-gy-zkK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="Stp-zJ-E4h"/>
+                <constraint firstAttribute="trailing" secondItem="r7X-ri-B4K" secondAttribute="trailing" constant="12" id="W83-Oa-14s"/>
+                <constraint firstItem="Is4-ls-J29" firstAttribute="top" secondItem="bQX-Wr-zaa" secondAttribute="bottom" constant="19" id="Ynd-FC-WN9"/>
+                <constraint firstItem="5qv-Ln-zbH" firstAttribute="centerY" secondItem="Is4-ls-J29" secondAttribute="centerY" id="aBZ-Hx-rPj"/>
+                <constraint firstItem="wa8-Un-YPD" firstAttribute="top" secondItem="gjr-ZG-9gC" secondAttribute="bottom" constant="21" id="bz6-DI-vv6"/>
+                <constraint firstItem="Is4-ls-J29" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="dSN-XK-Wap"/>
+                <constraint firstAttribute="trailing" secondItem="5qv-Ln-zbH" secondAttribute="trailing" constant="13" id="fpi-Ib-Udw"/>
+                <constraint firstItem="wa8-Un-YPD" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="14" id="fsh-nK-INY"/>
+                <constraint firstItem="UY5-Yv-pNA" firstAttribute="top" secondItem="4ri-tj-IAD" secondAttribute="bottom" constant="49" id="gAS-Dr-dfl"/>
+                <constraint firstItem="bQX-Wr-zaa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="h4i-PR-C7m"/>
+                <constraint firstItem="4ri-tj-IAD" firstAttribute="top" secondItem="Is4-ls-J29" secondAttribute="bottom" id="hQt-7B-i8F"/>
+                <constraint firstItem="gjr-ZG-9gC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="izy-PI-Vpo"/>
+                <constraint firstItem="ZGa-gy-zkK" firstAttribute="top" secondItem="r7X-ri-B4K" secondAttribute="bottom" constant="19" id="nhM-c9-P5u"/>
+                <constraint firstItem="4ri-tj-IAD" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="rJh-9G-4zi"/>
+                <constraint firstAttribute="trailing" secondItem="gjr-ZG-9gC" secondAttribute="trailing" constant="12" id="rlg-2a-2nW"/>
+                <constraint firstAttribute="trailing" secondItem="bQX-Wr-zaa" secondAttribute="trailing" constant="12" id="xXS-VW-Z6g"/>
+            </constraints>
             <point key="canvasLocation" x="33.5" y="53.5"/>
         </view>
     </objects>
