--- a/InKeLive-gcz_99/InKeLive/Logon/RegisteredViewController.xib
+++ b/InKeLive-gcz_99/InKeLive/Logon/RegisteredViewController.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment version="2304" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -26,34 +25,45 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JW5-Bw-4BW">
-                    <rect key="frame" x="14" y="183" width="347" height="30"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JW5-Bw-4BW">
+                    <rect key="frame" x="12" y="183" width="351" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="0HX-gz-qwX"/>
+                    </constraints>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" textContentType="password"/>
                 </textField>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Bz-NT-ZVi">
-                    <rect key="frame" x="11" y="162" width="347" height="1"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Bz-NT-ZVi">
+                    <rect key="frame" x="12" y="162" width="351" height="1"/>
                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="pWW-Cq-aq0"/>
+                    </constraints>
                 </view>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fb6-bV-qgX">
-                    <rect key="frame" x="14" y="212" width="347" height="1"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fb6-bV-qgX">
+                    <rect key="frame" x="12" y="212" width="351" height="1"/>
                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="gIz-CJ-aDk"/>
+                    </constraints>
                 </view>
-                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请再次输入密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="99P-v7-mmD">
-                    <rect key="frame" x="14" y="232" width="347" height="30"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请再次输入密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="99P-v7-mmD">
+                    <rect key="frame" x="12" y="232" width="351" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="UTe-Y5-9Qj"/>
+                    </constraints>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" textContentType="password"/>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ex-KT-BzI">
-                    <rect key="frame" x="278" y="132" width="79" height="25"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ex-KT-BzI">
+                    <rect key="frame" x="284" y="132" width="79" height="25"/>
                     <color key="backgroundColor" red="1" green="0.81176470590000005" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="25" id="ln9-KR-WdT"/>
+                        <constraint firstAttribute="width" constant="79" id="vQI-8Y-wtd"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="获取验证码">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -68,29 +78,37 @@
                         <action selector="btnGetCodeClicked:" destination="-1" eventType="touchUpInside" id="Ga8-r7-zgi"/>
                     </connections>
                 </button>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KRv-nc-SIx">
-                    <rect key="frame" x="14" y="263" width="347" height="1"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KRv-nc-SIx">
+                    <rect key="frame" x="12" y="263" width="351" height="1"/>
                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="jBK-hy-Qn8"/>
+                    </constraints>
                 </view>
-                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入手机号码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IHi-Si-Amo">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入手机号码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IHi-Si-Amo">
                     <rect key="frame" x="14" y="83" width="347" height="30"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="FZ2-kp-IDp"/>
+                    </constraints>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RM5-sN-CxY">
-                    <rect key="frame" x="14" y="132" width="347" height="30"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RM5-sN-CxY">
+                    <rect key="frame" x="14" y="132" width="262" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="xbv-gW-cFq"/>
+                    </constraints>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qol-wQ-0fO">
-                    <rect key="frame" x="16" y="285" width="347" height="36"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qol-wQ-0fO">
+                    <rect key="frame" x="12" y="285" width="351" height="36"/>
                     <color key="backgroundColor" red="1" green="0.81176470590000005" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="36" id="VRg-zD-8HN"/>
+                    </constraints>
                     <state key="normal" title="注册">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
@@ -100,15 +118,52 @@
                             <integer key="value" value="18"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="btnRegisterClicked:" destination="-1" eventType="touchUpInside" id="C1U-XS-7wy"/>
+                    </connections>
                 </button>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qR6-ox-3Wp">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qR6-ox-3Wp">
                     <rect key="frame" x="14" y="112" width="347" height="1"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="duX-7S-U0V"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <constraints>
+                <constraint firstItem="RM5-sN-CxY" firstAttribute="top" secondItem="IHi-Si-Amo" secondAttribute="bottom" constant="19" id="39r-Vw-Xol"/>
+                <constraint firstAttribute="trailing" secondItem="qol-wQ-0fO" secondAttribute="trailing" constant="12" id="5d6-3R-NQN"/>
+                <constraint firstItem="IHi-Si-Amo" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="14" id="7UU-8h-9c7"/>
+                <constraint firstItem="2ex-KT-BzI" firstAttribute="leading" secondItem="RM5-sN-CxY" secondAttribute="trailing" constant="8" id="880-ti-W7H"/>
+                <constraint firstItem="IHi-Si-Amo" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="83" id="9PV-TT-612"/>
+                <constraint firstItem="8Bz-NT-ZVi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="Adl-Dl-bDM"/>
+                <constraint firstItem="JW5-Bw-4BW" firstAttribute="top" secondItem="8Bz-NT-ZVi" secondAttribute="bottom" constant="20" id="BFS-Wi-854"/>
+                <constraint firstItem="2ex-KT-BzI" firstAttribute="leading" secondItem="RM5-sN-CxY" secondAttribute="trailing" constant="8" id="EOV-fu-Mxe"/>
+                <constraint firstAttribute="trailing" secondItem="JW5-Bw-4BW" secondAttribute="trailing" constant="12" id="Ebh-MB-4Uu"/>
+                <constraint firstAttribute="trailing" secondItem="fb6-bV-qgX" secondAttribute="trailing" constant="12" id="Gal-ys-Bhs"/>
+                <constraint firstItem="8Bz-NT-ZVi" firstAttribute="top" secondItem="RM5-sN-CxY" secondAttribute="bottom" id="IYN-4g-Ewb"/>
+                <constraint firstAttribute="trailing" secondItem="2ex-KT-BzI" secondAttribute="trailing" constant="12" id="Iny-GY-Xdm"/>
+                <constraint firstItem="qR6-ox-3Wp" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="14" id="LYQ-pR-sCu"/>
+                <constraint firstItem="qol-wQ-0fO" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="Ran-XV-xP3"/>
+                <constraint firstAttribute="trailing" secondItem="KRv-nc-SIx" secondAttribute="trailing" constant="12" id="SWI-Lo-zce"/>
+                <constraint firstAttribute="trailing" secondItem="IHi-Si-Amo" secondAttribute="trailing" constant="14" id="Ssv-yW-x0U"/>
+                <constraint firstItem="qR6-ox-3Wp" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="112" id="Vb9-Bl-yH8"/>
+                <constraint firstItem="99P-v7-mmD" firstAttribute="top" secondItem="JW5-Bw-4BW" secondAttribute="bottom" constant="19" id="Y8f-Pc-lhS"/>
+                <constraint firstItem="fb6-bV-qgX" firstAttribute="top" secondItem="8Bz-NT-ZVi" secondAttribute="bottom" constant="49" id="ZNn-xJ-D7i"/>
+                <constraint firstItem="99P-v7-mmD" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="cQk-eF-jnJ"/>
+                <constraint firstItem="2ex-KT-BzI" firstAttribute="top" secondItem="IHi-Si-Amo" secondAttribute="bottom" constant="19" id="d2v-9U-5tN"/>
+                <constraint firstItem="fb6-bV-qgX" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="dKI-bL-oeb"/>
+                <constraint firstItem="qol-wQ-0fO" firstAttribute="top" secondItem="KRv-nc-SIx" secondAttribute="bottom" constant="21" id="gUe-nZ-WWS"/>
+                <constraint firstAttribute="trailing" secondItem="qR6-ox-3Wp" secondAttribute="trailing" constant="14" id="kgU-yt-JT7"/>
+                <constraint firstItem="JW5-Bw-4BW" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="lux-XP-4l4"/>
+                <constraint firstItem="KRv-nc-SIx" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="njp-Ms-Ynb"/>
+                <constraint firstItem="KRv-nc-SIx" firstAttribute="top" secondItem="99P-v7-mmD" secondAttribute="bottom" constant="1" id="rd4-62-UM3"/>
+                <constraint firstAttribute="trailing" secondItem="8Bz-NT-ZVi" secondAttribute="trailing" constant="12" id="vA7-Jd-YtC"/>
+                <constraint firstAttribute="trailing" secondItem="99P-v7-mmD" secondAttribute="trailing" constant="12" id="vnC-Qc-b5E"/>
+                <constraint firstItem="RM5-sN-CxY" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="14" id="zCa-H9-qGR"/>
+            </constraints>
+            <point key="canvasLocation" x="33.5" y="53.5"/>
         </view>
     </objects>
 </document>
